random syntax changes